feat: update the html titles for both kitware pages

--- a/centerline/kitware-30.0.0/index.html
+++ b/centerline/kitware-30.0.0/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>VTK.js Centerline Rendering</title>
+		<title>VTK.js 30.0.0 Centerline Rendering</title>
 		<style>
 			body {
 				margin: 0;
