--- a/centerline/kitware-29.2.0-reslice/index.html
+++ b/centerline/kitware-29.2.0-reslice/index.html
@@ -10,10 +10,28 @@
 				margin: 0;
 				padding: 0;
 				overflow: hidden;
+				display: flex;
+			}
+			#reslice-container {
+				width: 50vw;
+				height: 100vh;
+				position: relative;
+			}
+			#other-half {
+				width: 50vw;
+				height: 100vh;
+				background-color: #f0f0f0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 		</style>
 	</head>
 	<body>
+		<div id="reslice-container"></div>
+		<div id="other-half">
+			<p>Other content can go here</p>
+		</div>
 		<script type="module" src="script.js"></script>
 	</body>
 </html>
