feat: add main view to right half of screen

--- a/centerline/kitware-29.2.0-reslice/index.html
+++ b/centerline/kitware-29.2.0-reslice/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>VTK.js 29.2.0 Centerline Rendering</title>
+		<title>VTK.js 29.2.0 (RESLICE) Centerline Rendering</title>
 		<style>
 			body {
 				margin: 0;
@@ -17,21 +17,16 @@
 				height: 100vh;
 				position: relative;
 			}
-			#other-half {
+			#main-view-container {
 				width: 50vw;
 				height: 100vh;
-				background-color: #f0f0f0;
-				display: flex;
-				align-items: center;
-				justify-content: center;
+				position: relative;
 			}
 		</style>
 	</head>
 	<body>
 		<div id="reslice-container"></div>
-		<div id="other-half">
-			<p>Other content can go here</p>
-		</div>
+		<div id="main-view-container"></div>
 		<script type="module" src="script.js"></script>
 	</body>
 </html>
