feat: migrate to typescript

--- a/centerline/kitware-29.2.0-reslice/index.html
+++ b/centerline/kitware-29.2.0-reslice/index.html
@@ -27,6 +27,6 @@
 	<body>
 		<div id="reslice-container"></div>
 		<div id="main-view-container"></div>
-		<script type="module" src="script.js"></script>
+		<script type="module" src="script.ts"></script>
 	</body>
 </html>
